src/objects/Population__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Population__c</fullName>
        <label>Total Population</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Population_in_Millions__c</fullName>
        <formula>Total_Population__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Population in Millions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Population</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Total_Population__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>Morocco</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Pop-{0}</displayFormat>
        <label>Population ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Population</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>